# speech_to_text_experimentation

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  scratch_file.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: whisper.py
src/: audio_utils.py
